# ImageDownloader

./: CMakeLists.txt
include/: Application.h  DownloadManager.h
src/: Application.cpp  DownloadManager.cpp  main.cpp
